syntax = "proto3";

package nearclip.protocol;

// BLE通信消息协议
message BLEMessage {
  string message_id = 1;           // 消息唯一标识
  MessageType type = 2;            // 消息类型
  string payload = 3;              // 消息载荷
  int64 timestamp = 4;             // Unix时间戳(毫秒)
  int32 sequence_number = 5;       // 序列号
}

// 消息类型枚举
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_PING = 1;
  MESSAGE_TYPE_PONG = 2;
  MESSAGE_TYPE_DATA = 3;
  MESSAGE_TYPE_ACK = 4;
}

// 连接状态枚举
enum ConnectionState {
  CONNECTION_STATE_UNSPECIFIED = 0;
  CONNECTION_STATE_DISCONNECTED = 1;
  CONNECTION_STATE_CONNECTING = 2;
  CONNECTION_STATE_CONNECTED = 3;
  CONNECTION_STATE_FAILED = 4;
}

// 设备信息
message DeviceInfo {
  string device_id = 1;            // 设备唯一标识
  string device_name = 2;          // 设备名称
  DeviceType device_type = 3;      // 设备类型
  int32 rssi = 4;                  // 信号强度
  bool is_nearclip_device = 5;     // 是否为NearClip设备
}

// 设备类型枚举
enum DeviceType {
  DEVICE_TYPE_UNSPECIFIED = 0;
  DEVICE_TYPE_ANDROID = 1;
  DEVICE_TYPE_MAC = 2;
  DEVICE_TYPE_IOS = 3;
  DEVICE_TYPE_OTHER = 4;
}